layout is stable reste le bug de la verticalscrollbar du content a rendre fit

--- a/src/hs-components/MainMenuSidebar/sidebar-menu.css
+++ b/src/hs-components/MainMenuSidebar/sidebar-menu.css
@@ -59,6 +59,13 @@
     box-shadow: none;
 }
 
+.e-sidebar.e-right {
+    border-left: 0px transparent;
+}
+.e-sidebar.e-left {
+    border-right: 0px transparent;
+}
+
 .radiobutton {
     text-align: center;
 }
@@ -117,4 +124,3 @@ body {
 .close-btn:focus {
     background: #fafafa;
 }
-
